# yt_history

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  extract_cookies.py  pyproject.toml  requirements-dev.txt  requirements.txt  yt_history.py
src/: __init__.py  auth.py  config.py  exceptions.py  history_fetcher.py  history_filter.py  history_parser.py  models.py  progress.py  youtube_client.py
