[project]
name = "yt-history"
version = "1.0.0"
description = "CLI tool to fetch complete YouTube watch history"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Samuel Gadiel", email = "samuelgadiel@gmail.com" }
]
keywords = ["youtube", "history", "cli", "youtube-api", "browser-cookies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "browser-cookie3>=0.20.0",
    "requests>=2.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy==2.1.0",
    "pre-commit>=4.0.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/SamuelGadiel/yt_history"
Repository = "https://github.com/SamuelGadiel/yt_history"
Issues = "https://github.com/SamuelGadiel/yt_history/issues"

[project.scripts]
yt-history = "yt_history:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

# =============================================================================
# Ruff - Linter and Formatter
# =============================================================================
[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4

# Exclude patterns
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable rules:
# E/W - pycodestyle (errors and warnings)
# F - Pyflakes (unused imports, undefined names)
# I - isort (import sorting)
# D - pydocstyle (docstring conventions)
# UP - pyupgrade (Python version-specific upgrades)
# B - flake8-bugbear (common bugs and design problems)
# C4 - flake8-comprehensions (list/dict comprehension improvements)
# SIM - flake8-simplify (code simplification suggestions)
# TCH - flake8-type-checking (TYPE_CHECKING imports)
# RUF - Ruff-specific rules
select = ["E", "W", "F", "I", "D", "UP", "B", "C4", "SIM", "TCH", "RUF"]

# Ignore specific rules:
# D203 - 1 blank line required before class docstring (conflicts with D211)
# D213 - Multi-line docstring summary should start at the second line (conflicts with D212)
# E501 - Line too long (handled by formatter)
ignore = ["D203", "D213", "E501"]

# Allow autofix for all enabled rules (when running with --fix)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"test_*.py" = ["D100", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces (not tabs)
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

# =============================================================================
# Mypy - Static Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.9"

# Strictness - high rigor with JSON flexibility
disallow_untyped_defs = true           # All functions must have type hints
disallow_any_unimported = false        # Allow Any from imports
disallow_any_expr = false              # Allow Any in expressions
disallow_any_decorated = false         # Allow Any in decorators
disallow_any_explicit = false          # Allow explicit Any annotations
disallow_subclassing_any = true        # Prevent subclassing Any
warn_return_any = false                # Don't warn on returning Any (needed for JSON parsing)
warn_unused_ignores = true             # Warn about unnecessary # type: ignore
warn_redundant_casts = true            # Warn about unnecessary casts
warn_unused_configs = true             # Warn about unused config options
no_implicit_optional = true            # Optional[T] must be explicit (not T = None)
strict_optional = true                 # Enable strict Optional checking
strict_equality = true                 # Prohibit equality checks between incompatible types

# Error output
show_error_codes = true                # Show error codes in messages
show_column_numbers = true             # Show column numbers in errors
pretty = true                          # Use pretty output with source snippets

# Import discovery
namespace_packages = true              # Support namespace packages
explicit_package_bases = true          # Use explicit package bases

# Warnings
warn_unreachable = true                # Warn about unreachable code
warn_no_return = true                  # Warn about missing return statements

# Miscellaneous
check_untyped_defs = true              # Check function bodies even without type hints

# Per-module options
[[tool.mypy.overrides]]
# Third-party libraries without stubs
module = [
    "browser_cookie3.*",
    "dotenv.*",
]
ignore_missing_imports = true
